--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.speedchecker.android.sdk.demo"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 6
-        versionName "1.0.6"
+        versionCode 7
+        versionName "1.0.7"
     }
 
     buildTypes {
@@ -25,5 +25,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //TODO: 2. Update the "app level" gradle file.
-    implementation 'com.speedchecker:android-sdk:4.2.115-demo'
+    implementation 'com.speedchecker:android-sdk:4.2.118-demo-2'
 }
