update demo app

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,26 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        maven { url "https://jitpack.io" }
+        //TODO: 1. Update the "project level" gradle file.
+        maven {
+            url 'https://maven.speedcheckerapi.com/artifactory/libs-demo'
+            credentials {
+                username = "demo"
+                password = "AP85qiz6wYEsCttWU2ZckEWSwJKuA6mSYcizEY"
+            }
+        }
+    }
+}
+rootProject.name = "Speedchecker Demo"
 include ':app'
