--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.speedchecker.android.sdk.demo"
+        applicationId "citymesh.networktester.testnmeasurementpoc"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -43,7 +43,7 @@ android {
 dependencies {
 
     //TODO: 2. Update the "app level" gradle file.
-    implementation 'com.speedchecker:android-sdk:4.2.228'
+    implementation 'com.speedchecker:android-sdk:4.2.229'
     implementation 'com.xeoh.android:text-highlighter:1.0.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
